--- a/FinalHTML5.html
+++ b/FinalHTML5.html
@@ -49,7 +49,7 @@ mark {
     </section>
     <footer>
         <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Web Design For Everyone">
-        This page was created by Ammar &amp; Colleen van Lent.
+        This page was created by Aryan &amp; Colleen van Lent.
         To learn more about web design, visit
         <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>
     </footer>
