--- a/FinalHTML5.html
+++ b/FinalHTML5.html
@@ -15,8 +15,8 @@ mark {
     <header>
         <h1>Aryan Kasu</h1>
         <nav>
-            <a href = "http://www.gmail.com">One</a>
-            <a href = "http://www.facebook.com">Two</a>
+            <a href = "http://www.cnn.com">One</a>
+            <a href = "http://www.cnbc.com">Two</a>
             <a href = "http://www.google.com">Three</a>
             <a href = "http://www.github.com/aryan-kasu">Your Choice</a><br>
     </nav>
